fixed render products on mobile screen

--- a/src/pages/LandingPages/Automation/LandingAutomation.less
+++ b/src/pages/LandingPages/Automation/LandingAutomation.less
@@ -887,6 +887,12 @@
     }
   }
 
+  .our-cases {
+    .btn.white {
+      display: none;
+    }
+  }
+
   .user-comments {
     background: #F3F7FD;
     padding: 5.714285714285714rem 5.714285714285714rem 100px 5.714285714285714rem;
