--- a/src/pages/LandingPages/Automation/OurCases/OurCases.less
+++ b/src/pages/LandingPages/Automation/OurCases/OurCases.less
@@ -150,6 +150,22 @@
       }
     }
 
+    .btn.white {
+      margin: 50px 0 0 auto;
+      font-size: 21px;
+      text-transform: uppercase;
+      color: #6D6DF6;
+      font-weight: 500;
+      height: 56px;
+      border: 2px solid #6D6DF6;
+      background: #fff;
+
+      &:hover {
+        background: rgba(109, 109, 246, 0.1);
+        color: #6D6DF6;
+      }
+    }
+
     @media (max-width: 800px) {
       & {
         .slider {
