--- a/src/pages/LandingPages/Pricing/Pricing.less
+++ b/src/pages/LandingPages/Pricing/Pricing.less
@@ -154,6 +154,7 @@
           }
 
           div {
+            width: 90%;
             display: none;
             font-size: 13px;
           }
