--- a/src/pages/LandingPages/ZTH/ZTH.less
+++ b/src/pages/LandingPages/ZTH/ZTH.less
@@ -928,7 +928,7 @@
       left: 0;
       right: 0;
       margin: 0 auto;
-      bottom: 10.714285714285714rem;
+      bottom: 5rem;
 
       width: 80vw;
       max-width: 1440px;
@@ -962,6 +962,7 @@
     }
 
     @media (max-width: 1400px) {
+      padding-bottom: 240px;
       .description {
         top: 0;
       }
@@ -971,14 +972,14 @@
         height: 270px;
         right: 100px;
         left: auto;
-        bottom: 200px;
+        bottom: 330px;
       }
 
       .our-cases {
         background: #fff;
         width: 100%;
         box-sizing: border-box;
-        bottom: 20px;
+        bottom: 50px;
         padding-top: 0;
         padding-left: 5%;
         padding-right: 5%;
@@ -986,6 +987,10 @@
         .container {
           .content {
             margin: 150px 0 0 0;
+          }
+
+          .btn.white {
+            margin: 30px auto 0 auto;
           }
         }
 
@@ -1056,7 +1061,7 @@
         height: 140px;
         left: 20px;
         right: auto;
-        bottom: 440px;
+        bottom: 570px;
       }
     }
 
@@ -1093,6 +1098,13 @@
               }
             }
           }
+        }
+
+        .btn.white {
+          width: 100%;
+          height: 48px;
+          font-size: 16px;
+          padding: 0 10px;
         }
       }
     }
