--- a/src/pages/LandingPages/components/ManagedPriceSlider/ManagedPriceSlider.less
+++ b/src/pages/LandingPages/components/ManagedPriceSlider/ManagedPriceSlider.less
@@ -175,6 +175,8 @@
     }
 
     .col {
+      width: 100%;
+      min-width: auto;
       margin-bottom: 40px;
     }
 
